Bug 1462412 - Correctly ignore the perspective property for frames that aren't transformable. r=dbaron